# elevation-based-navigation-system

./: .gitignore  .gitignore.swp  README.md
backend/: Makefile  install_manifest.txt
backend/graph/: CMakeLists.txt  Dockerfile  Graph.py  README.md  compile.sh  demo.ipynb  elenaLib.cpp  ex.ipynb  include.txt  main.cpp  preprocess.py  requirements.txt
backend/graph/include/: RequestRateLimiter.cpp  RequestRateLimiter.h  graph.cpp  graph.h  node.cpp  node.h  path.cpp  path.h  pathfinding.cpp  pathfinding.h  query.cpp  query.h  restApi.cpp  restApi.h  utils.cpp  utils.h
backend/graph/maps/: test.edges.csv  test.maxGroup.edges.csv  test.maxGroup.nodes.csv  test.nodes.csv
backend/preprocess/: CMakeLists.txt  Makefile  custom.lua  fetchElevation  fetchElevation.cpp  postgis.conf  requirements.txt
backend/preprocess/include/: parse.cpp  parse.h  request.cpp  request.h  sqlQuery.cpp  sqlQuery.h
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
frontend/lib/leaflet/plugins/css/: leaflet-sidebar.modified.css
frontend/lib/leaflet/plugins/js/: leaflet.awesome-markers.modified.js  leaflet.spin.js
samples/: README.md
